Modification_fichier_modélisation_et_rapport_final

--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -578,6 +578,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-Dans cette partie, nous avons commencé par le **nettoyage de la base**:\n",
+    "Dans cette partie, nous avons commencé par afficher les données, supprimer les doublons. Par la suite, nous avons fait une représentation  d'un heatmap avec des valeurs manquantes. Fort était de constater que plusieurs variables n'avaient aucune valeur. Celles-ci ont été rapidement supprimés, et nous sommmes restées avec 31 variables. Parmi les variables restantes, nous avons supprimé les valeurs imputer les valeurs manquantes par la médiane (car celle-ci est moins sensibles aux valeurs abbérantes). Mais avant l'imputation, nous avons du convertir les variables int ou float qui se retrouvaient sous le format STR dans notre base. En plus de cela, nous avons mis la variable DATE sous le format datetime, et nous l'avons aussi mis en index, car cela est très cruciale pour l'étude de séries temporelles que nou ferons dans la suite."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "<div style=\"width: 95%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
     "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">B) Statistiques descriptives</h2>"
@@ -587,8 +595,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Statistiques de base et visualisation** :\n",
+    "\n",
+    "La base étant déja propre, nous sommes donc passés à l'étape des statistiques descriptives.\n",
+    "Nous avons commencé par faire des statistiques de base. Ainsi, nous avons fait ressortir un tableau récapitulatif ( moyenne, variance, min, max) de chaque variable, que nous avons par la suite interpreter.\n",
+    "\n",
+    "Afin d'avoir une meilleure visualisation de la distribution et des tendances de chaque variables, nous avons représenter la distribution, la densité, et les boxplot de chaque variable, que bous avons pris le soin d'interpreter par la suite.\n",
+    "\n",
+    "**Mise en valeur des outliers**\n",
+    "\n",
+    "A partir des boxplots, nous avons par la suite fait ressortir le nombre de outliers sur chaque variables. Et nous avons pu constater que le nombre de outlier n'était pas si petit que ça; mais pour des raisons de la survenance des évènements extremes (telles que la neige ou vague de chaleur), nous avons décidé de ne pas traiter ces outliers et de les laisser intact.\n",
+    "\n",
+    "**Importance de l'Analyse de Corrélation**\n",
+    "\n",
+    "L’analyse des corrélations entre les variables météorologiques est une étape essentielle pour identifier les relations et les interdépendances dans les données. Par exemple, les corrélations élevées entre les variables de température (TX, TN, TM) ou celles liées à l’humidité (DHUMI40, DHUMI80) révèlent des regroupements naturels qui simplifient l'interprétation des phénomènes climatiques. De plus, la détection de corrélations négatives, comme entre les précipitations (RR) et les températures maximales (TX), aide à comprendre des dynamiques spécifiques comme l’opposition entre conditions chaudes et sèches ou froides et humides. Ces observations permettent de mieux structurer les données avant de passer à des analyses ou des modèles prédictifs, tout en limitant les effets de redondance et en améliorant la pertinence des résultats.\n",
+    "\n",
+    "**Importance de l'Analyse en Composantes Principales (ACP)**\n",
+    "\n",
+    "L’ACP joue un rôle clé en réduisant la dimensionnalité des données tout en conservant une grande partie de leur variabilité. Dans ce projet, les deux premières composantes principales capturent les contributions majeures des variables, simplifiant ainsi la compréhension des données complexes. Par exemple, CP1 regroupe les variables liées à la température, tandis que CP2 se concentre sur l'humidité et les précipitations, ce qui reflète des axes naturels des conditions météorologiques. Cette réduction dimensionnelle permet d’éviter la multicolinéarité et d’optimiser les modèles en sélectionnant uniquement les variables les plus informatives, rendant les analyses plus robustes et exploitables pour des prévisions ou des interprétations climatiques."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"width: 95%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Times New Roman', serif;\">\n",
     "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">III) Travail préliminaire et modélisation</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Puisque nous manipulons les séries temporelles, notre data set a été divisé en 2 parties : le train (soit 80% du datframe) et le test (20 % du dataframe, contenant les valeurs les plus récentes).*"
    ]
   },
   {
@@ -635,6 +674,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**A partir de tous les modèles réalisés on se rend compte qu'en terme de performance, de pourcentage de perte, de R carré, de RMSE, de MAE, le modèle le plus performant est celui du réseau de Neurone simple en utilisant uniquement la variable cible (température moyenne (TM).**\n",
+    "\n",
+    "**En terme de performance elle est suivie du Random Forest et de la regréssion linéaire multiple.** \n",
+    "**Les modèles que nous avons implémenté qui ont des performances les plus faibles sont le réseau de neurone ontenu avec une fenetre de 10 autres variables explicatives et le SARIMA(1,1,1)*(1,1,0,12).**\n",
+    "\n",
+    "**Les résultats que nous obtenons au sujet du SARIMA sont très décevants. En réalité en se basant sur la théorie des séries temporelles, ce modèle la est censé etre le meilleur. Mais à cause des problèmes dus aux limites de compilation, nou n'avons pas pu exécuter le SARIMA(1,1,1)*(1,1,0,365), mais plutot le SARIMA(1,1,1)*(1,1,0,12), et cela explique surement la qualité de résultats obtenus de ce modèle.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**En terme de feature importance, le modèle Random Forest nou a montré que les variables les plus importantes  à la prédiction de la température dans la zone de l'AIN sont EPTGRILLE: Evapotranspiration mensuelle, DG. La variable la moins importante est le cumul de la neige sur 6 heures (\"NEIGTOT06\")**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"width: 90%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
     "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\"> Limites et perspectives </h2>"
    ]
@@ -643,8 +701,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nous avons rencontré de nombreuses difficultés dans ce travail\n",
+    "\n",
+    "- **Récupération des données** : Se familiariser à la documentation de mainipulation d'une API, et faire face à la limite que l'API ne pouvait que nous fournir des données sur une période de 1 mois; que celle ci avait des jours sans données. Et il fallait tenir compte de tout cela dans la recupération des données\n",
+    "\n",
+    "- **Gestion des outliers dans l'analyse exploratoire** \n",
+    "\n",
+    "- **Présence élevée de variables sans valeurs (variables avec aucune valeurs)**\n",
+    "\n",
+    "- **Modélisation** : étape très difficile, car il s'agissait de la manipulations des séroes temporelles\n",
+    "\n",
+    "**Comme perspectives, on aimerait pouvoir compiler SARIMA(1,1,1)*(1,1,0,365). On reste convaincus qu'on aurait pu avoir de meilleurs résultats.**\n",
+    "\n",
+    "*Dans un futur proche, on espère face à ce projet implémenter des modèles plus poussées, des modèles spécifiques utilisés en prédiction météo.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"width: 90%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
     "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\"> Reférences </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour mener à bien ce projet, nous nous sommes inspirés des travaux suivants : \n",
+    "\n",
+    "- [1](https://pythonds.linogaliana.fr) Lino Galiana (2024). Compréhension du travail attendu et apprentissage du travail sur Github\n",
+    "\n",
+    "- [2](https://public-api.meteofrance.fr/public/DPObs/v1/liste-stations) API, Météo France. L'extraction des données climatiques.\n",
+    "\n",
+    "- [3](https://www.kaggle.com/code/adrianograms/climate-prediction) Adriano Grams (2022). Prédiction du climat.\n"
    ]
   }
  ],
