Modification sur Rapportfinal, Modélisation, et sur la description de Rapport_final dans le readme

--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -627,6 +627,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Notre variable cible est TM (Température Moyenne)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Puisque nous manipulons les séries temporelles, notre data set a été divisé en 2 parties : le train (soit 80% du datframe) et le test (20 % du dataframe, contenant les valeurs les plus récentes).*"
    ]
   },
@@ -642,8 +649,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ici, nous avons commencé par visualiser la série.\n",
+    "A partir de sa représentation, nous avons su qu'elle était composée additivement, d'ou sur cette base, nous avons décomposé la série en \n",
+    "tendance, saisonalité et stationnarité.\n",
+    "\n",
+    "Par la suite nous avons fait des test de stationnarité. Pour cela, nous avons commencé par chercher le modèle idéal à notre série (modèle avec tendance et constante,\n",
+    "modèle sans tendance avec constante, modèle sans constante et sans tendance). Après des test des regréssiosn succéssives, nous avons vu que le modèle convenable \n",
+    "était celui sans constante et sans tendance. Avec ce dernier, nous avons donc éffectué le test de stationnarité, et la série s'afférait stationnaire.\n",
+    "\n",
+    "Après cela, nous avons éffectué des test de stationnarité classique comme (ADF test, KPSS test), et ceux-ci nous ont confirmé la stationnarité de la série.\n",
+    "\n",
+    "Après cela, pour une meilleure analyse, nous avons standardisé nos variables, et puis nous nous sommes lancés à la recherche du modèle idéal.\n",
+    "\n",
+    "Pour cela, nous avons commencé par représenter l'ACF et le PACF qui nous ont permis d'avoir non seulement les valeurs de p et q, mais aussi de confirmer une saisonalité annuelle.\n",
+    "\n",
+    "Cela nous a poussé à tester le SARIMA(1,1,0)*(1,1,0,365) et le SARIMA(1,1,1)*(1,1,0,365); Or pour des raisons de compilation , nous avons plutot exécuter\n",
+    "le SARIMA(1,1,0)*(1,1,0,12) et le SARIMA(1,1,1)*(1,1,0,12).\n",
+    "\n",
+    "En se basant sur les critères de AIC , RMSE, on a conclut que le meilleur modèle est le le SARIMA(1,1,01*(1,1,0,12).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"width: 95%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
     "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">B) Modélisation en utilisant le réseau de neurones </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ici nous avons fait une modélisation en 2 versions :\n",
+    "\n",
+    "- La première consistait elle meme à trouver une fenetre de 10 variables explicatives (nombre de variables fixées par nous-meme) et puis de regresser TM sur ces variables. Les métriques nous permettant d'évaluer le modèle étant le pourcentage de perte sur le train et le test\n",
+    "\n",
+    "- La deuxième consistait à prédire température moyenne (TM) en utilisant uniquement les variables antérieures passées de la variables. Les meme métriques que celle de la première option ont été utilisées.\n",
+    "\n",
+    "**Après l'analyse, on s'est rendu compte sur la base des métrique que c'est la deuxième variante qui était la plus performante.**"
    ]
   },
   {
@@ -658,8 +703,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ici, nous avons tout simplement prédit la variable TM en fonction des autes variables, aussi simplement en respectant\n",
+    "les conditions d'une regression linéaire, c'est à dire en enlevant toutes les variables fortement corrélées entre elles (par exemple toutes les variables liées à la température, comme l'a montré le heatmap de corrélation)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"width: 95%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
     "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\"> D) Modélisation en utilisant Random Forest </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ici la modélisation a été faite en enlevant toujours ces variables fortement correlées entre elles afin d'éviter un problème de multicolinéarité.\n",
+    "\n",
+    "Par la suite, la modélisation s'est faite au travers de la construction d'un pipeline contenant une optimisation des paramètres en utilisant Grid Search.\n",
+    "\n",
+    "Les paramètres optimaux optenus, nous abons établi des arbres de décision quittant de la variable EPIGRILLE. \n",
+    "Et puis nous avons fini par l'évaluation du modèle et le feature importance."
    ]
   },
   {
