Ajout de deux sources dans le README et le Rapport_final : Modification finale  🎉

--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -793,13 +793,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour mener à bien ce projet, nous nous sommes inspirés des travaux suivants : \n",
+    "Pour mener à bien ce projet, nous nous sommes inspirés des sources suivantes : \n",
     "\n",
     "- [1](https://pythonds.linogaliana.fr) Lino Galiana (2024). Compréhension du travail attendu et apprentissage du travail sur Github\n",
     "\n",
-    "- [2](https://public-api.meteofrance.fr/public/DPObs/v1/liste-stations) API, Météo France. L'extraction des données climatiques.\n",
+    "- [2]Cours de séries temporelle, Dr Souleymane Fofana , ENSAE Dakar, 2022/2023: Afin de mieux comprendre le projet vu qu'on a travaillé avec la température qui est ne série temporelle.\n",
     "\n",
-    "- [3](https://www.kaggle.com/code/adrianograms/climate-prediction) Adriano Grams (2022). Prédiction du climat.\n"
+    "- [3](https://chatgpt.com/)IA génératives : chatgpt, Perplexity(2024): Pour le brainstorming.\n",
+    "\n",
+    "- [4](https://www.kaggle.com/code/adrianograms/climate-prediction) Adriano Grams (2022). Prédiction du climat."
    ]
   }
  ],
